# Adaptive-Prompt-Compressor

./: .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  Research_Paper_Adaptive_Prompt_Compression.docx  app.py  docker-compose.yml  interview_slides.md  paper_draft.md  pyproject.toml  requirements.txt  run.sh  ~$search_Paper_Adaptive_Prompt_Compression.docx
.github/workflows/: ci.yml
data/: benchmark_prompts.json
examples/: basic_usage.py
latex/: main.tex
results/: benchmark_20260526_164902.csv  experiments.db
scripts/: comprehensive_benchmark.py  final_real_test.py  optimize_hyperparams.py  run_benchmarks.py  run_vertex_benchmark.py  test_real_api_no_learning.py  visualize_weights.py
src/: ablation_study.py  agent.py  app.py  async_interface.py  database.py  environment.py  evaluator.py  generate_docx.py  generate_pareto.py  interface.py  telemetry.py  utils.py  visualize_results.py
src/integrations/: langchain_wrapper.py
tests/: test_core.py
