[project]
name = "adaptive-prompt-compressor"
version = "1.0.0"
description = "Task-aware dynamic prompt compression using LinUCB Contextual Bandits."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "MINGHAO WANG", email = "howwang0507@example.com" }
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "scikit-learn>=1.2.0",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.25.0",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "python-docx>=0.8.11",
    "google-cloud-aiplatform>=1.148.1",
    "sentence-transformers>=5.1.2",
    "bert-score>=0.3.13",
    "openai>=2.38.0",
    "anthropic>=0.105.2",
    "nltk>=3.9.2",
    "redis>=7.0.1",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
managed = true
dev-dependencies = [
    "pytest>=7.3.1",
    "black>=23.3.0",
    "ruff>=0.0.270",
    "mypy>=1.3.0",
    "types-requests>=2.31.0"
]
